xee-xpath/src/ir/snapshots/xee_xpath__ir__ast_ir__tests__absent_context_in_function.snap
---
source: xee-xpath/src/ir/ast_ir.rs
expression: "convert_xpath(\"function() { . }\")"
---
Err(
    SpannedComponentAbsentInDynamicContext {
        src: "function() { . }",
        span: SourceSpan {
            offset: SourceOffset(
                13,
            ),
            length: SourceOffset(
                1,
            ),
        },
    },
)
