xee-xpath/src/ir/snapshots/xee_xpath__ir__ast_ir__tests__add.snap
---
source: xee-xpath/src/ir/ast_ir.rs
expression: "convert_expr_single(\"1 + 2\")"
---
Ok(
    Spanned {
        value: Binary(
            Binary {
                left: Spanned {
                    value: Const(
                        Integer(
                            1,
                        ),
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            1,
                        ),
                    },
                },
                op: Add,
                right: Spanned {
                    value: Const(
                        Integer(
                            2,
                        ),
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            4,
                        ),
                        length: SourceOffset(
                            1,
                        ),
                    },
                },
            },
        ),
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                5,
            ),
        },
    },
)
