xee-xpath/src/ir/snapshots/xee_xpath__ir__ast_ir__tests__axis_step_with_predicates.snap
---
source: xee-xpath/src/ir/ast_ir.rs
expression: "convert_xpath(\"child::a[. gt 1]\")"
---
Ok(
    Spanned {
        value: FunctionDefinition(
            FunctionDefinition {
                params: [
                    Param(
                        Name(
                            "v0",
                        ),
                    ),
                    Param(
                        Name(
                            "v1",
                        ),
                    ),
                    Param(
                        Name(
                            "v2",
                        ),
                    ),
                ],
                body: Spanned {
                    value: Let(
                        Let {
                            name: Name(
                                "v3",
                            ),
                            var_expr: Spanned {
                                value: Step(
                                    Step {
                                        step: Step {
                                            axis: Child,
                                            node_test: NameTest(
                                                Name(
                                                    Spanned {
                                                        value: Name {
                                                            name: "a",
                                                            prefix: None,
                                                            namespace: None,
                                                        },
                                                        span: 7..8,
                                                    },
                                                ),
                                            ),
                                        },
                                        context: Spanned {
                                            value: Variable(
                                                Name(
                                                    "v0",
                                                ),
                                            ),
                                            span: 0..0,
                                        },
                                    },
                                ),
                                span: 0..16,
                            },
                            return_expr: Spanned {
                                value: Filter(
                                    Filter {
                                        context_names: ContextNames {
                                            item: Name(
                                                "v4",
                                            ),
                                            position: Name(
                                                "v5",
                                            ),
                                            last: Name(
                                                "v6",
                                            ),
                                        },
                                        var_atom: Spanned {
                                            value: Variable(
                                                Name(
                                                    "v3",
                                                ),
                                            ),
                                            span: 0..16,
                                        },
                                        return_expr: Spanned {
                                            value: Binary(
                                                Binary {
                                                    left: Spanned {
                                                        value: Variable(
                                                            Name(
                                                                "v4",
                                                            ),
                                                        ),
                                                        span: 0..0,
                                                    },
                                                    op: ValueGt,
                                                    right: Spanned {
                                                        value: Const(
                                                            Integer(
                                                                1,
                                                            ),
                                                        ),
                                                        span: 14..15,
                                                    },
                                                },
                                            ),
                                            span: 9..15,
                                        },
                                    },
                                ),
                                span: 9..15,
                            },
                        },
                    ),
                    span: 9..15,
                },
            },
        ),
        span: 0..16,
    },
)
