xee-xpath/src/ir/snapshots/xee_xpath__ir__ast_ir__tests__cast_question_mark.snap
---
source: xee-xpath/src/ir/ast_ir.rs
expression: "convert_expr_single(\"1 cast as xs:string?\")"
---
Ok(
    Spanned {
        value: Cast(
            Cast {
                atom: Spanned {
                    value: Const(
                        Integer(
                            1,
                        ),
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            1,
                        ),
                    },
                },
                type_: SingleType {
                    name: Name {
                        name: "string",
                        namespace: Some(
                            "http://www.w3.org/2001/XMLSchema",
                        ),
                    },
                    question_mark: true,
                },
            },
        ),
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                20,
            ),
        },
    },
)
