xee-xpath/src/ir/snapshots/xee_xpath__ir__ast_ir__tests__cast_unknown_schema_type.snap
---
source: xee-xpath/src/ir/ast_ir.rs
expression: "convert_expr_single(\"1 cast as unknown\")"
---
Err(
    XQST0052,
)
